--- a/index.html
+++ b/index.html
@@ -15310,6 +15310,7 @@ a.anchor-link {
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <h1 id="Reference">Reference<a class="anchor-link" href="#Reference">&#182;</a></h1><ul>
+<li><a href="利用人工智慧實現高準確率人臉辨識及系統實作.pptx">利用人工智慧實現高準確率人臉辨識及系統實作.pptx</a></li>
 <li><a href="https://github.com/Michael07220823/new_face.git">GitHub - new_face</a></li>
 <li><a href="https://hdl.handle.net/11296/hytkck">SHEN, YUEH-CHUN, "LBPCNN Face Recognition Algorithm Implemented on the Raspberry Pi Access Control Monitoring System", 2021</a></li>
 </ul>
